tests/valid/ListConversion_Valid_1.whiley
string f([real] ls):
    return str(ls)

void main([string] args):
    out->println(f([1,2,3]))
