tests/invalid/ListConversion_CompileFail_1.whiley
void f([real] ls):
    print str(ls)

void main([string] args):
    f([1,2,3,[]])
